# MeetUp

Client/: AuthForm.cpp  AuthForm.h  AuthPage.cpp  CMakeLists.txt  Client.cpp  HomePage.cpp  HomePage.h  RegisterForm.cpp  RegisterForm.h  main.cpp  muclient.cpp  muclient.h  muclient.ui
Server/: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  README.md  build.ps1  docker-compose.yml  main.cpp  run.ps1
Server/core/: ClientSession.cpp  ClientSession.h  ConferenceRoom.cpp  ConferenceRoom.h  README.md  RoomRegistry.cpp  RoomRegistry.h
Server/docs/: desktop-client-guide.md
Server/interface/: README.md
Server/interface/Abstract/: IPersonalRooms.h  IRoomAliases.h  ISessions.h  IUsers.h
Server/interface/InMemory/: InMemoryPersonalRooms.h  InMemoryRoomAliases.h  InMemorySessions.h  InMemoryUsers.h
Server/interface/sqlite/: SqliteDb.cpp  SqliteDb.h  SqlitePersonalRooms.cpp  SqlitePersonalRooms.h  SqliteRoomAliases.cpp  SqliteRoomAliases.h  SqliteSessions.cpp  SqliteSessions.h  SqliteUsers.cpp  SqliteUsers.h
Server/models/: PersonalRoom.h  README.md  RoomAlias.h  Session.h  User.h
Server/network/: ConferenceServer.cpp  ConferenceServer.h  HttpApi.cpp  HttpApi.h  HttpFileServer.cpp  HttpFileServer.h  HttpRequest.cpp  HttpRequest.h  README.md
Server/proxy/: 10-gen-cert.sh  20-certbot.sh  30-renew-loop.sh  Dockerfile  README.md  nginx.conf
Server/services/: AuthService.cpp  AuthService.h  PersonalRoomService.cpp  PersonalRoomService.h  README.md
Server/storage/: README.md
Server/tools/: README.md  build.ps1  run.ps1  update.ps1  update.sh
Server/web/: README.md  anon_lobby.html  conference.html  home.html  index.html  login.html  register.html
Server/web/assets/: fonts.css  meetup-common.js  meetup-ds.js  meetup-media.js  theme.css
Win11Client/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Win11Client.runsettings  vcpkg.json  win11client.cpp
Win11Client/docs/: ROADMAP.md  account-login-guide.md
Win11Client/qml/: AnonLobbyScreen.qml  AppButton.qml  AppIcon.qml  AppInput.qml  AppModal.qml  AuthScaffold.qml  Avatar.qml  Badge.qml  Card.qml  ChatMessage.qml  ConferenceScreen.qml  ControlDock.qml  Divider.qml  Field.qml  HomeScreen.qml  IconButton.qml  LinkRow.qml  LoginScreen.qml  Main.qml  MockData.qml  PinnedStage.qml  RegisterScreen.qml  ScreenPickerModal.qml  ScreenStage.qml  SettingsModal.qml  Theme.qml  VideoTile.qml
Win11Client/scripts/: _vsdevenv.ps1  build.ps1  clean.ps1  configure.ps1  deploy.ps1  run.ps1
Win11Client/src/: GlobalHotkeys.cpp  GlobalHotkeys.h  HistoryStore.cpp  HistoryStore.h  MediaSettings.cpp  MediaSettings.h  ScreenSources.cpp  ScreenSources.h  SysBridge.cpp  SysBridge.h  main.cpp
Win11Client/src/crypto/: README.md
Win11Client/src/media/: AudioEngine.cpp  AudioEngine.h  README.md  ScreenCursor.cpp  ScreenCursor.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h  VideoEngine.cpp  VideoEngine.h  VideoSendWorker.cpp  VideoSendWorker.h
Win11Client/src/net/: ApiClient.cpp  ApiClient.h  AuthController.cpp  AuthController.h  PersonalRoomController.cpp  PersonalRoomController.h  Protocol.h  README.md  RoomController.cpp  RoomController.h  SessionCookieJar.h  SignalingClient.cpp  SignalingClient.h
